--- a/src/scss/components/_geography.scss
+++ b/src/scss/components/_geography.scss
@@ -11,13 +11,15 @@
   left: -1vw;
   width: 40vw;
   height: 29.688vw;
-  &:hover {
-    .geography-img--off {
-      transform: translateX(2vw) scale(1.2);
-    }
+  @include for-desktop {
+    &:hover {
+      .geography-img--off {
+        transform: translateX(2vw) scale(1.2);
+      }
 
-    .geography-img--on {
-      transform: translateX(2vw) scale(1.2);
+      .geography-img--on {
+        transform: translateX(2vw) scale(1.2);
+      }
     }
   }
 }
@@ -36,8 +38,6 @@
 
 .geography-marker {
   position: absolute;
-  top: 50%;
-  left: 30vw;
   &__item {
     display: flex;
     justify-content: center;
