--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -75,6 +75,7 @@
   height: 29.323vw;
   border-radius: 50%;
   background-color: var(--bg-color);
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
   overflow: hidden;
 }
 
