Сверстал страницу о компании, переписал код для меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,8 +27,11 @@
             <ul class="sub-menu__list list-reset">
               <li class="sub-menu__item">
                 <a href="page-about.html" class="sub-menu__link nav__link"
-                  >Наша миссия</a
+                  >О компании</a
                 >
+              </li>
+              <li class="sub-menu__item">
+                <a href="" class="sub-menu__link nav__link">Наша миссия</a>
               </li>
             </ul>
           </div>
@@ -57,31 +60,35 @@
           <div class="sub-menu">
             <ul class="sub-menu__list list-reset">
               <li class="sub-menu__item">
-                <a href="page-about.html" class="sub-menu__link nav__link"
+                <a href="#" class="sub-menu__link nav__link"
+                  >Направление деятельности</a
+                >
+              </li>
+
+              <li class="sub-menu__item">
+                <a href="#" class="sub-menu__link nav__link"
                   >Поставка нефтепродуктов на внутреннем рынке</a
                 >
               </li>
 
               <li class="sub-menu__item">
-                <a href="page-portfolio.html" class="sub-menu__link nav__link"
-                  >Перевалка масел</a
-                >
+                <a href="#" class="sub-menu__link nav__link">Перевалка масел</a>
               </li>
 
               <li class="sub-menu__item">
-                <a href="page-process.html" class="sub-menu__link nav__link"
+                <a href="#" class="sub-menu__link nav__link"
                   >Перевалка битума</a
                 >
               </li>
 
               <li class="sub-menu__item">
-                <a href="page-process.html" class="sub-menu__link nav__link"
+                <a href="#" class="sub-menu__link nav__link"
                   >Транспортно-экспедиторские услуги</a
                 >
               </li>
 
               <li class="sub-menu__item">
-                <a href="page-process.html" class="sub-menu__link nav__link"
+                <a href="#" class="sub-menu__link nav__link"
                   >Бункеровка судов</a
                 >
               </li>
@@ -89,10 +96,10 @@
           </div>
         </li>
         <li class="nav__item">
-          <a href="page-price.html" class="nav__link">карьера</a>
+          <a href="#" class="nav__link">карьера</a>
         </li>
         <li class="nav__item">
-          <a href="page-price.html" class="nav__link">контакты</a>
+          <a href="#" class="nav__link">контакты</a>
         </li>
       </ul>
     </nav>
