--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -1,6 +1,6 @@
 <div class="menu">
   <aside class="menu-sidebar" data-scroll-header>
-    <a href="#" class="menu-logo">
+    <a href="index.html" class="menu-logo">
       <picture>
         <source srcset="img/menu-logo.webp" type="image/webp" />
         <img loading="lazy" src="img/menu-logo.png" class="image" alt="Logo" />
@@ -61,7 +61,7 @@
             <li class="nav__item">
               <a href="index.html" class="nav__link">Главная</a>
             </li>
-            <li class="nav__item nav__item--sub">
+            <li class="nav__item nav__item--active">
               <a href="#" class="nav__link">
                 О компании
                 <svg
@@ -82,20 +82,25 @@
               <div class="sub-menu">
                 <ul class="sub-menu__list list-reset">
                   <li class="sub-menu__item">
+                    <a href="page-about.html" class="sub-menu__link nav__link"
+                      >О компании</a
+                    >
+                  </li>
+                  <li class="sub-menu__item">
                     <a href="#" class="sub-menu__link nav__link">Наша миссия</a>
                   </li>
                 </ul>
               </div>
             </li>
             <li class="nav__item">
-              <a href="page-catalog.html" class="nav__link">пресс-центр</a>
+              <a href="#" class="nav__link">пресс-центр</a>
             </li>
             <li class="nav__item">
-              <a href="page-price.html" class="nav__link">Стоимость</a>
+              <a href="#" class="nav__link">Стоимость</a>
             </li>
-            <li class="nav__item nav__item--sub">
+            <li class="nav__item nav__item--active">
               <a href="#" class="nav__link">
-                направление деятельности
+                Направление деятельности
                 <svg
                   width="12"
                   height="13"
@@ -114,33 +119,37 @@
               <div class="sub-menu">
                 <ul class="sub-menu__list list-reset">
                   <li class="sub-menu__item">
-                    <a href="page-about.html" class="sub-menu__link nav__link"
+                    <a href="#" class="sub-menu__link nav__link"
+                      >Направление деятельности</a
+                    >
+                  </li>
+
+                  <li class="sub-menu__item">
+                    <a href="#" class="sub-menu__link nav__link"
                       >Поставка нефтепродуктов на внутреннем рынке</a
                     >
                   </li>
 
                   <li class="sub-menu__item">
-                    <a
-                      href="page-portfolio.html"
-                      class="sub-menu__link nav__link"
+                    <a href="#" class="sub-menu__link nav__link"
                       >Перевалка масел</a
                     >
                   </li>
 
                   <li class="sub-menu__item">
-                    <a href="page-process.html" class="sub-menu__link nav__link"
+                    <a href="#" class="sub-menu__link nav__link"
                       >Перевалка битума</a
                     >
                   </li>
 
                   <li class="sub-menu__item">
-                    <a href="page-process.html" class="sub-menu__link nav__link"
+                    <a href="#" class="sub-menu__link nav__link"
                       >Транспортно-экспедиторские услуги</a
                     >
                   </li>
 
                   <li class="sub-menu__item">
-                    <a href="page-process.html" class="sub-menu__link nav__link"
+                    <a href="#" class="sub-menu__link nav__link"
                       >Бункеровка судов</a
                     >
                   </li>
@@ -148,10 +157,10 @@
               </div>
             </li>
             <li class="nav__item">
-              <a href="page-price.html" class="nav__link">карьера</a>
+              <a href="#" class="nav__link">карьера</a>
             </li>
             <li class="nav__item">
-              <a href="page-price.html" class="nav__link">контакты</a>
+              <a href="#" class="nav__link">контакты</a>
             </li>
           </ul>
         </nav>
