--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,4 +20,7 @@
 @import "./components/leaders";
 @import "./components/geography";
 @import "./components/news";
+@import "./components/about-company";
+@import "./components/about-grid";
+@import "./components/about-history";
 @import "./components/footer";
