Сверстал страницу наша миссия

--- a/src/partials/about-company.html
+++ b/src/partials/about-company.html
@@ -141,7 +141,7 @@
       </svg>
     </div>
 
-    <a href="#about-grid" class="scroll-to about-company__scroll" data-scroll>
+    <a href="#about-grid" class="scroll-to main-scroll" data-scroll>
       <svg>
         <use xlink:href="img/sprite.svg#scrollTo"></use>
       </svg>
