--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,11 +12,11 @@
       <nav class="footer-nav" data-da=".footer-mobile__wrapper,600,1">
         <ul class="footer-nav__list list-reset">
           <li class="footer-nav__item">
-            <a href="#" class="footer-nav__link">Главная</a>
+            <a href="index.html" class="footer-nav__link">Главная</a>
           </li>
 
           <li class="footer-nav__item">
-            <a href="#" class="footer-nav__link">о компании</a>
+            <a href="page-about.html" class="footer-nav__link">о компании</a>
           </li>
 
           <li class="footer-nav__item">
