--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,4 +23,6 @@
 @import "./components/about-company";
 @import "./components/about-grid";
 @import "./components/about-history";
+@import "./components/mission";
+@import "./components/strategy";
 @import "./components/footer";
