--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,7 @@
                 >
               </li>
               <li class="sub-menu__item">
-                <a href="" class="sub-menu__link nav__link">Наша миссия</a>
+                <a href="page-mission.html" class="sub-menu__link nav__link">Наша миссия</a>
               </li>
             </ul>
           </div>
