--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -87,7 +87,9 @@
                     >
                   </li>
                   <li class="sub-menu__item">
-                    <a href="#" class="sub-menu__link nav__link">Наша миссия</a>
+                    <a href="page-mission.html" class="sub-menu__link nav__link"
+                      >Наша миссия</a
+                    >
                   </li>
                 </ul>
               </div>
