Сверстал страницу карьера

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,3 +1,10 @@
+.footer {
+  background: linear-gradient(
+    360deg,
+    rgba(0, 0, 0, 0.2) 0%,
+    rgba(0, 0, 0, 0.2) 100%
+  );
+}
 .footer-container {
   border-bottom: 1px solid #3a3a3e;
 }
