--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,4 +25,6 @@
 @import "./components/about-history";
 @import "./components/mission";
 @import "./components/strategy";
+@import "./components/carrier";
+@import "./components/feedback";
 @import "./components/footer";
