--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -28,7 +28,7 @@
           </li>
 
           <li class="footer-nav__item">
-            <a href="#" class="footer-nav__link">карьера</a>
+            <a href="page-carrier.html" class="footer-nav__link">карьера</a>
           </li>
 
           <li class="footer-nav__item">
