--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -96,7 +96,7 @@
           </div>
         </li>
         <li class="nav__item">
-          <a href="#" class="nav__link">карьера</a>
+          <a href="page-carrier.html" class="nav__link">карьера</a>
         </li>
         <li class="nav__item">
           <a href="#" class="nav__link">контакты</a>
