Сверстал страницу контакты

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -32,7 +32,7 @@
           </li>
 
           <li class="footer-nav__item">
-            <a href="#" class="footer-nav__link">контакты</a>
+            <a href="page-contacts.html" class="footer-nav__link">контакты</a>
           </li>
         </ul>
       </nav>
