--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,4 +27,5 @@
 @import "./components/strategy";
 @import "./components/carrier";
 @import "./components/feedback";
+@import "./components/contacts";
 @import "./components/footer";
