--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -99,7 +99,7 @@
           <a href="page-carrier.html" class="nav__link">карьера</a>
         </li>
         <li class="nav__item">
-          <a href="#" class="nav__link">контакты</a>
+          <a href="page-contacts.html" class="nav__link">контакты</a>
         </li>
       </ul>
     </nav>
