Сверстал страницу пресс центр

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -20,7 +20,7 @@
           </li>
 
           <li class="footer-nav__item">
-            <a href="#" class="footer-nav__link">пресс-центр</a>
+            <a href="page-news.html" class="footer-nav__link">пресс-центр</a>
           </li>
 
           <li class="footer-nav__item">
