--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,4 +28,5 @@
 @import "./components/carrier";
 @import "./components/feedback";
 @import "./components/contacts";
+@import "./components/press-center";
 @import "./components/footer";
