--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,7 +37,7 @@
           </div>
         </li>
         <li class="nav__item">
-          <a href="page-catalog.html" class="nav__link">пресс-центр</a>
+          <a href="page-news.html" class="nav__link">пресс-центр</a>
         </li>
         <li class="nav__item nav__item--sub">
           <a href="#" class="nav__link">
