--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -95,7 +95,7 @@
               </div>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">пресс-центр</a>
+              <a href="page-news.html" class="nav__link">пресс-центр</a>
             </li>
             <li class="nav__item">
               <a href="#" class="nav__link">Стоимость</a>
