Сверстал страницу новости

--- a/src/partials/press-center.html
+++ b/src/partials/press-center.html
@@ -29,7 +29,7 @@
             порта Санкт-Петербург» в Европу. Компания Trafigura планирует ....
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
             <svg
               width="12"
               height="13"
@@ -70,7 +70,7 @@
             автономный округ.
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
             <svg
               width="12"
               height="13"
@@ -112,7 +112,7 @@
             Республику Беларусь, а также ....
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
             <svg
               width="12"
               height="13"
@@ -154,7 +154,7 @@
             порта Санкт-Петербург» в Европу. Компания Trafigura планирует ....
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
             <svg
               width="12"
               height="13"
@@ -195,7 +195,7 @@
             автономный округ.
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
             <svg
               width="12"
               height="13"
@@ -237,7 +237,7 @@
             Республику Беларусь, а также ....
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
             <svg
               width="12"
               height="13"
@@ -279,7 +279,7 @@
             порта Санкт-Петербург» в Европу. Компания Trafigura планирует ....
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
             <svg
               width="12"
               height="13"
@@ -320,7 +320,7 @@
             автономный округ.
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
             <svg
               width="12"
               height="13"
@@ -362,7 +362,7 @@
             Республику Беларусь, а также ....
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
             <svg
               width="12"
               height="13"
