--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,4 +29,5 @@
 @import "./components/feedback";
 @import "./components/contacts";
 @import "./components/press-center";
+@import "./components/news-single";
 @import "./components/footer";
