--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -1084,7 +1084,10 @@
             порта Санкт-Петербург» в Европу. Компания Trafigura планирует ....
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
             <svg
               width="12"
               height="13"
@@ -1125,7 +1128,10 @@
             автономный округ.
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
             <svg
               width="12"
               height="13"
@@ -1167,7 +1173,10 @@
             Республику Беларусь, а также ....
           </p>
 
-          <a href="#" class="news-card__btn btn-reset btn--small">
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
             <svg
               width="12"
               height="13"
