Сверстал страницу направления деятельности

--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -121,7 +121,9 @@
               <div class="sub-menu">
                 <ul class="sub-menu__list list-reset">
                   <li class="sub-menu__item">
-                    <a href="#" class="sub-menu__link nav__link"
+                    <a
+                      href="page-activity.html"
+                      class="sub-menu__link nav__link"
                       >Направление деятельности</a
                     >
                   </li>
