--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,4 +30,5 @@
 @import "./components/contacts";
 @import "./components/press-center";
 @import "./components/news-single";
+@import "./components/activity";
 @import "./components/footer";
