--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -24,7 +24,7 @@
           </li>
 
           <li class="footer-nav__item">
-            <a href="#" class="footer-nav__link">новости</a>
+            <a href="page-activity.html" class="footer-nav__link">новости</a>
           </li>
 
           <li class="footer-nav__item">
