--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,9 @@
                 >
               </li>
               <li class="sub-menu__item">
-                <a href="page-mission.html" class="sub-menu__link nav__link">Наша миссия</a>
+                <a href="page-mission.html" class="sub-menu__link nav__link"
+                  >Наша миссия</a
+                >
               </li>
             </ul>
           </div>
@@ -60,7 +62,7 @@
           <div class="sub-menu">
             <ul class="sub-menu__list list-reset">
               <li class="sub-menu__item">
-                <a href="#" class="sub-menu__link nav__link"
+                <a href="page-activity.html" class="sub-menu__link nav__link"
                   >Направление деятельности</a
                 >
               </li>
