Закончил десктоп всех страниц

--- a/src/partials/activity.html
+++ b/src/partials/activity.html
@@ -14,7 +14,7 @@
               на внутреннем рынке
             </p>
           </div>
-          <a href="#" class="btn btn-reset btn--primary">
+          <a href="page-supply.html#0" class="btn btn-reset btn--primary">
             <svg
               width="12"
               height="13"
@@ -41,7 +41,7 @@
               нефтепродуктов
             </p>
           </div>
-          <a href="#" class="btn btn-reset btn--primary">
+          <a href="page-export.html#1" class="btn btn-reset btn--primary">
             <svg
               width="12"
               height="13"
@@ -68,7 +68,10 @@
               масел
             </p>
           </div>
-          <a href="#" class="btn btn-reset btn--primary">
+          <a
+            href="page-transshipment-oils.html#2"
+            class="btn btn-reset btn--primary"
+          >
             <svg
               width="12"
               height="13"
@@ -95,7 +98,10 @@
               битума
             </p>
           </div>
-          <a href="#" class="btn btn-reset btn--primary">
+          <a
+            href="page-transshipment-bitumen.html#3"
+            class="btn btn-reset btn--primary"
+          >
             <svg
               width="12"
               height="13"
@@ -122,7 +128,10 @@
               услуги
             </p>
           </div>
-          <a href="#" class="btn btn-reset btn--primary">
+          <a
+            href="page-forwarding-services.html#4"
+            class="btn btn-reset btn--primary"
+          >
             <svg
               width="12"
               height="13"
@@ -149,7 +158,7 @@
               судов
             </p>
           </div>
-          <a href="#" class="btn btn-reset btn--primary">
+          <a href="page-bunkering.html#5" class="btn btn-reset btn--primary">
             <svg
               width="12"
               height="13"
