--- a/src/partials/carrier.html
+++ b/src/partials/carrier.html
@@ -147,6 +147,7 @@
       <svg>
         <use xlink:href="img/sprite.svg#scrollTo"></use>
       </svg>
+      <span>Подробнее</span>
     </a>
   </div>
 </section>
