--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -590,7 +590,7 @@
         Компания КТТ – надежный партнер в сфере продаж и поставок нефтепродуктов
         на внутреннем и экспортном рынках
       </p>
-      <button class="btn btn-reset btn--primary">
+      <a href="page-about.html" class="btn btn-reset btn--primary">
         <svg
           width="12"
           height="13"
@@ -606,7 +606,7 @@
           />
         </svg>
         <span>Подробнее</span>
-      </button>
+      </a>
     </div>
 
     <div class="hero-img" data-da=".hero-content,600,1">
