--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -102,7 +102,7 @@
             </li>
             <li class="nav__item nav__item--active">
               <a href="#" class="nav__link">
-                Направление деятельности
+                Направления деятельности
                 <svg
                   width="12"
                   height="13"
@@ -124,36 +124,54 @@
                     <a
                       href="page-activity.html"
                       class="sub-menu__link nav__link"
-                      >Направление деятельности</a
+                      >Направления деятельности</a
                     >
                   </li>
 
                   <li class="sub-menu__item">
-                    <a href="#" class="sub-menu__link nav__link"
+                    <a
+                      href="page-supply.html#0"
+                      class="sub-menu__link nav__link"
                       >Поставка нефтепродуктов на внутреннем рынке</a
                     >
                   </li>
 
                   <li class="sub-menu__item">
-                    <a href="#" class="sub-menu__link nav__link"
+                    <a
+                      href="page-export.html#1"
+                      class="sub-menu__link nav__link"
+                      >Экспорт нефтепродуктов</a
+                    >
+                  </li>
+
+                  <li class="sub-menu__item">
+                    <a
+                      href="page-transshipment-oils.html#2"
+                      class="sub-menu__link nav__link"
                       >Перевалка масел</a
                     >
                   </li>
 
                   <li class="sub-menu__item">
-                    <a href="#" class="sub-menu__link nav__link"
+                    <a
+                      href="page-transshipment-bitumen.html#3"
+                      class="sub-menu__link nav__link"
                       >Перевалка битума</a
                     >
                   </li>
 
                   <li class="sub-menu__item">
-                    <a href="#" class="sub-menu__link nav__link"
+                    <a
+                      href="page-forwarding-services.html#4"
+                      class="sub-menu__link nav__link"
                       >Транспортно-экспедиторские услуги</a
                     >
                   </li>
 
                   <li class="sub-menu__item">
-                    <a href="#" class="sub-menu__link nav__link"
+                    <a
+                      href="page-bunkering.html#5"
+                      class="sub-menu__link nav__link"
                       >Бункеровка судов</a
                     >
                   </li>
