--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,4 +31,6 @@
 @import "./components/press-center";
 @import "./components/news-single";
 @import "./components/activity";
+@import "./components/work";
+@import "./components/modal";
 @import "./components/footer";
