--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -43,7 +43,7 @@
         </li>
         <li class="nav__item nav__item--sub">
           <a href="#" class="nav__link">
-            направление деятельности
+            направления деятельности
             <svg
               width="12"
               height="13"
@@ -63,34 +63,48 @@
             <ul class="sub-menu__list list-reset">
               <li class="sub-menu__item">
                 <a href="page-activity.html" class="sub-menu__link nav__link"
-                  >Направление деятельности</a
+                  >Направления деятельности</a
                 >
               </li>
 
               <li class="sub-menu__item">
-                <a href="#" class="sub-menu__link nav__link"
+                <a href="page-supply.html#0" class="sub-menu__link nav__link"
                   >Поставка нефтепродуктов на внутреннем рынке</a
                 >
               </li>
 
               <li class="sub-menu__item">
-                <a href="#" class="sub-menu__link nav__link">Перевалка масел</a>
+                <a href="page-export.html#1" class="sub-menu__link nav__link"
+                  >Экспорт нефтепродуктов</a
+                >
               </li>
 
               <li class="sub-menu__item">
-                <a href="#" class="sub-menu__link nav__link"
+                <a
+                  href="page-transshipment-oils.html#2"
+                  class="sub-menu__link nav__link"
+                  >Перевалка масел</a
+                >
+              </li>
+
+              <li class="sub-menu__item">
+                <a
+                  href="page-transshipment-bitumen.html#3"
+                  class="sub-menu__link nav__link"
                   >Перевалка битума</a
                 >
               </li>
 
               <li class="sub-menu__item">
-                <a href="#" class="sub-menu__link nav__link"
+                <a
+                  href="page-forwarding-services.html#4"
+                  class="sub-menu__link nav__link"
                   >Транспортно-экспедиторские услуги</a
                 >
               </li>
 
               <li class="sub-menu__item">
-                <a href="#" class="sub-menu__link nav__link"
+                <a href="page-bunkering.html#5" class="sub-menu__link nav__link"
                   >Бункеровка судов</a
                 >
               </li>
@@ -107,34 +121,35 @@
     </nav>
 
     <div class="header__right" data-da=".menu-content__inner,1200,0">
-      <div class="header__search search">
-        <svg
-          width="20"
-          height="20"
-          viewBox="0 0 20 20"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <g clip-path="url(#clip0_713_203)">
-            <path
-              d="M19.3346 19.3346L14.0013 14.0013M8.66797 16.668C7.61739 16.668 6.57711 16.461 5.6065 16.059C4.6359 15.657 3.75398 15.0677 3.01111 14.3248C2.26825 13.582 1.67897 12.7 1.27693 11.7294C0.874895 10.7588 0.667969 9.71854 0.667969 8.66797C0.667969 7.61739 0.874895 6.57711 1.27693 5.6065C1.67897 4.6359 2.26825 3.75398 3.01111 3.01111C3.75398 2.26825 4.6359 1.67897 5.6065 1.27693C6.57711 0.874895 7.61739 0.667969 8.66797 0.667969C10.7897 0.667969 12.8245 1.51082 14.3248 3.01111C15.8251 4.51141 16.668 6.54624 16.668 8.66797C16.668 10.7897 15.8251 12.8245 14.3248 14.3248C12.8245 15.8251 10.7897 16.668 8.66797 16.668Z"
-              stroke="#DE1829"
-            />
-          </g>
-          <defs>
-            <clipPath id="clip0_713_203">
-              <rect width="20" height="20" fill="white" />
-            </clipPath>
-          </defs>
-        </svg>
-      </div>
+      <form class="header__search">
+        <label class="search-label">
+          <input class="input-reset search-input" type="search" />
+          <svg
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g clip-path="url(#clip0_713_203)">
+              <path
+                d="M19.3346 19.3346L14.0013 14.0013M8.66797 16.668C7.61739 16.668 6.57711 16.461 5.6065 16.059C4.6359 15.657 3.75398 15.0677 3.01111 14.3248C2.26825 13.582 1.67897 12.7 1.27693 11.7294C0.874895 10.7588 0.667969 9.71854 0.667969 8.66797C0.667969 7.61739 0.874895 6.57711 1.27693 5.6065C1.67897 4.6359 2.26825 3.75398 3.01111 3.01111C3.75398 2.26825 4.6359 1.67897 5.6065 1.27693C6.57711 0.874895 7.61739 0.667969 8.66797 0.667969C10.7897 0.667969 12.8245 1.51082 14.3248 3.01111C15.8251 4.51141 16.668 6.54624 16.668 8.66797C16.668 10.7897 15.8251 12.8245 14.3248 14.3248C12.8245 15.8251 10.7897 16.668 8.66797 16.668Z"
+                stroke="#DE1829"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_713_203">
+                <rect width="20" height="20" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+        </label>
+      </form>
       <ul class="header__lang lang list-reset" id="top-lang">
         <li class="pll-parent-menu-item lang__item-active lang__item">
           <a class="lang-item lang-item--el" href="#switcher">rus</a>
           <div class="lang-icon">
             <svg
-              width="12"
-              height="13"
               viewBox="0 0 12 13"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
