--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,6 @@
 .header {
   padding: 1.146vw 0;
+  background-color: var(--bg-color);
   &__container {
     display: flex;
     align-items: center;
@@ -89,20 +90,45 @@
   }
 }
 
-.search {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+.header__search {
   width: 2.604vw;
   height: 2.604vw;
   border: 1px solid var(--gray-color);
   border-radius: 5px;
+  transition: all 0.3s ease-out;
   cursor: pointer;
+}
+
+.search-label {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+
   svg {
-    margin-right: 0.7vw;
+    position: absolute;
+    top: 50%;
+    right: 0.7vw;
+    transform: translateY(-50%);
     width: 1.042vw;
     height: 1.042vw;
   }
+}
+
+.search-input {
+  width: 100%;
+  height: 100%;
+  color: var(--light-color);
+  padding: 1vw 2.7vw 1vw 1vw;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.search--active {
+  width: 13vw;
 }
 
 //lang
