--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -14,7 +14,7 @@
   z-index: 4;
 }
 .menu-logo {
-  padding: 1.458vw 0 1.458vw;
+  padding: 1.3vw 0 1.3vw;
   width: 1.25vw;
   height: auto;
   img {
@@ -56,7 +56,7 @@
 }
 
 .social {
-  padding: 1.458vw 0 1.458vw;
+  padding: 1.3vw 0 1.3vw;
   &__list {
     display: flex;
     flex-direction: column;
@@ -336,15 +336,6 @@
     gap: 3.906vw;
     margin-bottom: 2.214vw;
     //search
-    .search {
-      width: 100%;
-      height: 6.51vw;
-      svg {
-        width: 2.604vw;
-        height: 2.604vw;
-        margin-right: 1.953vw;
-      }
-    }
 
     //lang
     .lang {
@@ -385,6 +376,20 @@
     }
   }
 
+  .header__search {
+    width: 100%;
+    height: 6.51vw;
+    svg {
+      width: 2.604vw;
+      height: 2.604vw;
+      right: 2vw;
+    }
+
+    input {
+      padding: 2vw 6vw 2vw 2vw;
+      font-size: 2.5vw;
+    }
+  }
   .menu-content__left {
     width: 100%;
     display: flex;
@@ -582,16 +587,6 @@
   .header__right {
     gap: 2.667vw;
     margin-bottom: 5.333vw;
-    //search
-    .search {
-      height: 13.333vw;
-      border-radius: 5px;
-      svg {
-        width: 5.333vw;
-        height: 5.333vw;
-        margin-right: 4vw;
-      }
-    }
 
     //lang
     .lang {
@@ -620,6 +615,22 @@
     .lang-item {
       font-size: 4.267vw;
       line-height: 5.333vw;
+    }
+  }
+
+  //search
+  .header__search {
+    height: 13.333vw;
+    border-radius: 5px;
+    svg {
+      width: 5.333vw;
+      height: 5.333vw;
+      right: 3vw;
+    }
+
+    input {
+      padding: 2vw 10vw 2vw 3vw;
+      font-size: 4vw;
     }
   }
 
