--- a/src/scss/components/_scroll-to.scss
+++ b/src/scss/components/_scroll-to.scss
@@ -10,6 +10,7 @@
     height: 100%;
     fill: var(--light-color);
   }
+
   &::after {
     content: "";
     display: block;
@@ -29,9 +30,20 @@
 
 .main-scroll {
   position: relative;
-  display: block;
   bottom: 0;
   left: 0;
+
+  span {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    padding-left: 2.5vw;
+    transform: translateY(-50%);
+    font-size: 0.729vw;
+    line-height: 0.885vw;
+    text-transform: uppercase;
+    opacity: 0.5;
+  }
 }
 
 @keyframes scrollTo {
