Адаптировал страницу о компании под планшеты

--- a/src/partials/about-company.html
+++ b/src/partials/about-company.html
@@ -24,11 +24,58 @@
         </div>
       </div>
 
-      <div class="about-company__img">
-        <picture>
-          <source srcset="img/about.webp" type="image/webp" />
-          <img loading="lazy" src="img/about.png" class="image" alt="About" />
-        </picture>
+      <div class="swiper about-company__swiper">
+        <div class="swiper-wrapper about-company__wrapper">
+          <div class="swiper-slide about-company__slide about-company__img">
+            <picture>
+              <source srcset="img/about.webp" type="image/webp" />
+              <img
+                loading="lazy"
+                src="img/about.png"
+                class="image"
+                alt="About"
+              />
+            </picture>
+          </div>
+
+          <div class="swiper-slide about-company__slide about-company__img">
+            <picture>
+              <source srcset="img/about.webp" type="image/webp" />
+              <img
+                loading="lazy"
+                src="img/about.png"
+                class="image"
+                alt="About"
+              />
+            </picture>
+          </div>
+
+          <div class="swiper-slide about-company__slide about-company__img">
+            <picture>
+              <source srcset="img/about.webp" type="image/webp" />
+              <img
+                loading="lazy"
+                src="img/about.png"
+                class="image"
+                alt="About"
+              />
+            </picture>
+          </div>
+
+          <div class="swiper-slide about-company__slide about-company__img">
+            <picture>
+              <source srcset="img/about.webp" type="image/webp" />
+              <img
+                loading="lazy"
+                src="img/about.png"
+                class="image"
+                alt="About"
+              />
+            </picture>
+          </div>
+        </div>
+
+        <div class="about-company__pagination swiper-pagination"></div>
       </div>
 
       <?xml version="1.0" standalone="no"?>
