--- a/src/scss/components/_about-grid.scss
+++ b/src/scss/components/_about-grid.scss
@@ -28,6 +28,10 @@
     height: 41.667vw;
     z-index: -1;
   }
+
+  .about-company__anim {
+    display: none;
+  }
 }
 
 .grid-images {
@@ -90,4 +94,91 @@
 
 .grid-pagination {
   display: none;
+}
+
+@include tablet {
+  .about-grid {
+    margin-bottom: 0;
+
+    &__container {
+      margin-bottom: 13vw;
+    }
+
+    &__title {
+      margin-bottom: 3vw;
+    }
+
+    &__content {
+      margin-bottom: 6.51vw;
+    }
+
+    &__text {
+      gap: 3.385vw;
+      .text-page {
+        max-width: 100%;
+      }
+    }
+
+    &__anim {
+      display: none;
+    }
+
+    .about-company__anim {
+      position: static;
+      display: block;
+    }
+  }
+
+  .grid-images {
+    max-width: 92.7vw;
+    margin-bottom: 5.208vw;
+  }
+  .grid-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: auto;
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-rows: auto;
+    gap: 1.953vw;
+    height: auto;
+  }
+  .grid-img {
+    border-radius: 10px;
+    &:nth-child(1) {
+      grid-area: 1 / 1 / 4 / 2;
+      width: 52.734vw;
+      height: 55vw;
+    }
+
+    &:nth-child(2) {
+      grid-area: 1 / 2 / 2 / 3;
+      width: 38vw;
+      height: 23.1vw;
+    }
+
+    &:nth-child(3) {
+      grid-area: 2 / 2 / 4 / 3;
+      width: 38vw;
+      height: 30vw;
+    }
+
+    &:nth-child(4) {
+      width: 39vw;
+      height: 54vw;
+      grid-area: 4 / 1 / 7 / 2;
+    }
+
+    &:nth-child(5) {
+      width: 51.7vw;
+      height: 29.167vw;
+      transform: translateX(-13.7vw);
+      grid-area: 4 / 2 / 6 / 3;
+    }
+
+    &:nth-child(6) {
+      width: 51.7vw;
+      height: 22.7vw;
+      transform: translateX(-13.7vw);
+      grid-area: 6 / 2 / 7 / 3;
+    }
+  }
 }
