Адаптировал страницу наша миссия под планшеты

--- a/src/partials/business.html
+++ b/src/partials/business.html
@@ -119,7 +119,7 @@
             </picture>
           </div>
           <h3 class="business-card__title">
-            Поставка нефтепродуктов на внутреннем рынке
+            Поставка нефᴛепродуктов на внутреннем рынке
           </h3>
           <span class="business-card__num">01</span>
         </div>
