--- a/src/scss/components/_strategy.scss
+++ b/src/scss/components/_strategy.scss
@@ -24,3 +24,27 @@
     height: 100%;
   }
 }
+
+@include tablet {
+  .strategy {
+    margin-bottom: 13.021vw;
+  }
+
+  .strategy-title {
+    margin-bottom: 3.906vw;
+  }
+  .strategy-text {
+    display: flex;
+    justify-content: inherit;
+    flex-direction: column;
+    gap: 3.906vw;
+    margin-bottom: 6.51vw;
+    p {
+      max-width: 100%;
+    }
+  }
+  .strategy-img {
+    height: 45.833vw;
+    margin-bottom: 2.083vw;
+  }
+}
