--- a/src/scss/components/_scroll-to.scss
+++ b/src/scss/components/_scroll-to.scss
@@ -70,6 +70,11 @@
 @include tablet {
   .main-scroll {
     display: none;
+    span {
+      font-size: 1.823vw;
+      line-height: 2.214vw;
+      padding-left: 7vw;
+    }
   }
 
   .scroll-to {
