Адаптировал страницу карьера под планшеты

--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -218,7 +218,7 @@
               </label>
             </div>
 
-            <div class="form-group file-area">
+            <div class="form-group file-area" data-da=".form-fields,1200,3">
               <input type="file" multiple="multiple" required />
               <div class="file-dummy">
                 <p>Перетяните сюда своё резюме или прикрепите файл</p>
