--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -114,6 +114,17 @@
     height: fit-content;
     border-radius: 10px;
     overflow: hidden;
+    &::after {
+      content: "";
+      position: absolute;
+      top: 13vw;
+      left: 23.2vw;
+      width: 2.5vw;
+      height: 0.7vw;
+      background-color: var(--red-color);
+      border-radius: 50%;
+      z-index: 1;
+    }
   }
 
   .contacts-map__img {
@@ -125,9 +136,119 @@
   .contacts-map__marker {
     display: block;
     position: absolute;
-    top: 10vw;
     left: 23vw;
     width: 2.865vw;
     height: 4.167vw;
+    animation: contacts-marker 1.6s linear infinite;
+    z-index: 2;
+  }
+
+  @keyframes contacts-marker {
+    0% {
+      top: 8vw;
+    }
+    50% {
+      top: 9vw;
+    }
+    100% {
+      top: 8vw;
+    }
+  }
+}
+
+@include tablet {
+  .contacts {
+    gap: 9.115vw;
+    padding-top: 20vw;
+    margin-bottom: 9.115vw;
+  }
+
+  .contacts-container {
+    gap: 11.719vw;
+  }
+
+  .contacts-items {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 4vw;
+    row-gap: 13.021vw;
+  }
+  .contacts-item {
+    gap: 1.302vw;
+    &::after {
+      display: none;
+    }
+
+    &__title {
+      font-size: 4.688vw;
+      line-height: 8.594vw;
+    }
+
+    &__info {
+      gap: 1.302vw;
+      svg {
+        transform: translateY(0.4vw);
+        flex-shrink: 0;
+        width: 3.125vw;
+        height: 3.125vw;
+      }
+      span {
+        font-size: 2.604vw;
+        line-height: 3.646vw;
+      }
+    }
+  }
+
+  .contacts-anim {
+    height: auto;
+    width: 200vw;
+  }
+
+  //contacts-feedback
+  .contacts-feedback {
+    flex-direction: column;
+    margin-bottom: 9.115vw;
+
+    .custom-checkbox__content {
+      display: flex;
+      gap: 1vw;
+    }
+
+    .contacts-map {
+      gap: 1.953vw;
+    }
+
+    .contacts-map__title {
+      font-size: 4.688vw;
+      line-height: 8.594vw;
+    }
+
+    .contacts-map__link {
+      width: 100%;
+      height: 65.885vw;
+      &::after {
+        left: 49.9vw;
+        top: 33vw;
+        width: 5.208vw;
+        height: 1.563vw;
+      }
+    }
+
+    .contacts-map__marker {
+      left: 49vw;
+      width: 7.031vw;
+      height: 10.417vw;
+    }
+
+    @keyframes contacts-marker {
+      0% {
+        top: 22vw;
+      }
+      50% {
+        top: 23vw;
+      }
+      100% {
+        top: 22vw;
+      }
+    }
   }
 }
